# fixp

./: #fixp.hpp#  .#fixp.hpp  .gitmodules  bench.cpp  fixp.hpp  hints.hpp  linalg.hpp  meson.build  simd.hpp  simd_neon.hpp  test.cpp
